<resources>
    <string name="app_name">Swipe</string>
    <string name="up_sort">上分类</string>
    <string name="down_sort">下分类</string>
    <string name="left_sort">左分类</string>
    <string name="right_sort">右分类</string>
    <string name="time_out">时间到 !</string>
    <string name="have_sorted">已分类</string>
    <string name="_0">0</string>
    <string name="score">分数</string>
    <string name="pause">暂停</string>
    <string name="skip_card">跳过卡片</string>
    <string name="change_sort">重选分类</string>
    <string name="odd_combos">连击补充</string>
    <string name="ten_combos">10连击</string>
    <string name="combos_ahh">连击！</string>
    <string name="start_game">开始游戏</string>
    <string name="setting">设置</string>
    <string name="rank">排行</string>
    <string name="help">帮助</string>
    <string name="exit">退出</string>
    <string name="start">开始</string>
    <string name="store">商店</string>
    <string name="_3">3</string>
    <string name="prepare">准备</string>
    <string name="coins">金币</string>
    <string name="time">时间</string>
    <string name="game_pause">游戏暂停</string>
    <string name="resume">继续</string>
    <string name="back_to_main">回到主菜单</string>
    <string name="drop_bonus_upgrade">掉落奖励升级</string>
    <string name="drop_coins_level">掉落金币等级</string>
    <string name="leave">离开</string>
    <string name="drop_time_level">掉落时间等级</string>
    <string name="drop_score_level">掉落分数等级</string>
    <string name="upgrade">升级</string>
    <string name="unlock">解锁</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="next_level_need_coins">下一等级需要的金币: </string>
    <string name="items_buy">道具购买</string>
    <string name="coins_buy">金币购买</string>
    <string name="spend">花</string>
    <string name="you_cannot_buy_any_more">你不能再买了！</string>
    <string name="history_max">历史最高</string>
    <string name="max_score">最高分</string>
    <string name="max_combos">最高连击</string>
    <string name="max_successful_sort">最高成功分类</string>
    <string name="clean_max_history">清除历史最高</string>
    <string name="music">音乐</string>
    <string name="sound_effect">音效</string>
    <string name="about">关于</string>
    <string name="tutorial">教学</string>
    <string name="score_colon">分数</string>
    <string name="max_combos_colon">最高连击</string>
    <string name="successful_sort_colon">成功分类</string>
    <string name="get_coins_colon">得到金币</string>
    <string name="combos">连击</string>
    <string name="confirm">确定</string>
    <string name="_5">5</string>
    <string name="_100">100</string>
    <string name="bonus_score_colon">随机奖励分数</string>
</resources>
