<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorUIDeepWhite"
                android:padding="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/store"
        android:textColor="@color/colorUIGreen"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/split_line_0"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="8dp"
        android:background="@color/colorUIGreen"
        />

    <LinearLayout
        android:id="@+id/layout_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_coins"
            android:layout_width="0dp"
            android:padding="12dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/coins"/>

        <TextView
            android:id="@+id/tv_coins"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/_100"
            android:textColor="@color/colorUIGreen"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btn_leave_to_main"
            android:layout_width="0dp"
            android:background="@color/colorUILightGreen"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1.2"
            android:textSize="17sp"
            android:text="@string/leave"/>

    </LinearLayout>

    <TextView
        android:id="@+id/split_line_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/layout_store"
        android:background="@color/colorUIGreen"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/split_line_1"
        android:layout_below="@id/split_line_0"
        android:scrollbars="none">


    </android.support.v7.widget.RecyclerView>


</RelativeLayout>